/*
 * Copyright 2013 Google Inc.
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *      http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

// Author: jud@google.com (Jud Porter)

syntax = "proto2";

import "net/instaweb/rewriter/critical_keys.proto";

option optimize_for = LITE_RUNTIME;

package net_instaweb;

// This represents the list of all above-the-fold images. We aggregate critical
// image information from multiple beacons, and so we store a history of
// multiple critical image beacon responses to deal with noisy data.
message CriticalImages {
  // The initial portion of this proto is legacy data.

  // The set of images in the above-the-fold portion of the webpage. Duplicates
  // should not be included.
  message CriticalImageSet {                                // legacy
    repeated string critical_images = 1;
  }

  // Keep the aggregated set of critical images. This should be recalculated and
  // updated whenever a new set is added to *_critical_images_sets below.
  repeated string html_critical_images = 1;                 // legacy
  repeated string css_critical_images = 2;                  // legacy

  repeated CriticalImageSet html_critical_images_sets = 3;  // legacy
  repeated CriticalImageSet css_critical_images_sets = 4;   // legacy

  // Non-legacy critical image information.
  optional CriticalKeys html_critical_image_support = 5;
  optional CriticalKeys css_critical_image_support = 6;
}
